[project]
name = "pismo"
version = "0.0.1"
description = "Keep calm and π on!"
readme = "README.md"
authors = [
    { name = "rocketniko", email = "rocketniko@pm.me" }
]
requires-python = ">=3.12"
licence = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/rocketniko/pismo"

[project.scripts]
pismo = "pismo:main"

[tool.maturin]
module-name = "pismo._core"
python-packages = ["pismo"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
